--- a/index.html
+++ b/index.html
@@ -6,22 +6,50 @@
 		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-		<title>CSS Flashcard</title>
+		<link rel="stylesheet" type="text/css" href="style.css">
+		<title>CSS Flashclass="card"</title>
 	</head>
 	<body>
 		<div class="container">
+			<h1>CSS Flashcard</h1>
 			<div class="row">
-				<div class="cols-md-3">
-					<a href="card-hover/index.html">FIRST</a>
+				<div class="col-md-4">
+					<div class="card">
+						<a href="card-hover/index.html"><h3>First Project</h3></a>
+						<img src="#" alt="thumbnail-1.1">
+					</div>
 				</div>
-				<div class="cols-md-3">
-					<a href="card-hover/index.html">FIRST</a>
+				<div class="col-md-4">
+					<div class="card">
+						<a href="#"><h3>Second Project</h3></a>
+						<img src="#" alt="thumbnail-1.2">
+					</div>
 				</div>
-				<div class="cols-md-3">
-					<a href="card-hover/index.html">FIRST</a>
+				<div class="col-md-4">
+					<div class="card">
+						<a href="#"><h3>Third Project</h3></a>
+						<img src="#" alt="thumbnail-1.3">
+					</div>
 				</div>
-				<div class="cols-md-3">
-					<a href="card-hover/index.html">FIRST</a>
+			</div>
+			<div class="row">
+				<div class="col-md-4">
+					<div class="card">
+						<a href="#"><h3>First Project</h3></a>
+						<img src="#" alt="thumbnail-2.1">
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="card">
+						<a href="#"><h3>Second Project</h3></a>
+						<img src="#" alt="thumbnail-2.2">
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="card">
+						<a href="#"><h3>Third Project</h3></a>
+						<img src="#" alt="thumbnail-2.3">
+					</div>
 				</div>
 			</div>
 		</div>
