--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
 		<div class="container">
 			<h1>CSS Flashcard</h1>
 			<div class="row">
-				<div class="col-md-4">
+				<div class="col-xl-4">
 					<div class="card">
 						<a href="card-hover/index.html"><h3>First Project</h3></a>
-						<img src="#" alt="thumbnail-1.1">
+						<img class="card-img-top" src="images/project-1.gif" alt="thumbnail-1.1">
 					</div>
 				</div>
-				<div class="col-md-4">
+				<div class="col-xl-4">
 					<div class="card">
 						<a href="#"><h3>Second Project</h3></a>
 						<img src="#" alt="thumbnail-1.2">
 					</div>
 				</div>
-				<div class="col-md-4">
+				<div class="col-xl-4">
 					<div class="card">
 						<a href="#"><h3>Third Project</h3></a>
 						<img src="#" alt="thumbnail-1.3">
@@ -33,19 +33,19 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-4">
+				<div class="col-xl-4">
 					<div class="card">
 						<a href="#"><h3>First Project</h3></a>
 						<img src="#" alt="thumbnail-2.1">
 					</div>
 				</div>
-				<div class="col-md-4">
+				<div class="col-xl-4">
 					<div class="card">
 						<a href="#"><h3>Second Project</h3></a>
 						<img src="#" alt="thumbnail-2.2">
 					</div>
 				</div>
-				<div class="col-md-4">
+				<div class="col-xl-4">
 					<div class="card">
 						<a href="#"><h3>Third Project</h3></a>
 						<img src="#" alt="thumbnail-2.3">
