--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
@@ -13,13 +14,13 @@
 		<div class="container">
 			<h1>CSS Flashcard</h1>
 			<div class="row">
-				<div class="col-xl-4">
+				<div class="col-xl-4 col-md-6">
 					<div class="card">
 						<a href="card-hover/index.html"><h3>First Project</h3></a>
 						<img class="card-img-top" src="images/project-1.gif" alt="thumbnail-1.1">
 					</div>
 				</div>
-				<div class="col-xl-4">
+				<div class="col-xl-4 col-md-6">
 					<div class="card">
 						<a href="#"><h3>Second Project</h3></a>
 						<img src="#" alt="thumbnail-1.2">
@@ -33,13 +34,13 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-xl-4">
+				<div class="col-xl-4 col-md-6">
 					<div class="card">
 						<a href="#"><h3>First Project</h3></a>
 						<img src="#" alt="thumbnail-2.1">
 					</div>
 				</div>
-				<div class="col-xl-4">
+				<div class="col-xl-4 col-md-6">
 					<div class="card">
 						<a href="#"><h3>Second Project</h3></a>
 						<img src="#" alt="thumbnail-2.2">
@@ -53,6 +54,5 @@
 				</div>
 			</div>
 		</div>
-		
 	</body>
 </html>
